@@ -1,0 +1,13 @@
+TESTS = \
+	geos_tests.rb \
+	test_combinations.rb \
+	test_helper.rb \
+	test_io.rb \
+	test_operations.rb \
+	test_relations.rb \
+	test_simple.rb 
+
+EXTRA_DIST = $(TESTS)
+
+test:
+	ruby $(TESTS)
