@@ -8,6 +8,9 @@ Changes in 3.0.0
 	- Added closed ring checks in IsValidOp
 	- Added missing ::clone() methods for Multi* geoms 
 	- Multi-input support in XMLTester 
+	- HEXWKB I/O
+	- Envelope(string) ctor
+	- Ruby interface
 
 - Optimizations:
 	- WKT parser speedup
